# recompilation-test

./: .gitignore  stack.yaml
application/: Main.hs  recompilation-test-application.cabal
config/: Config.hs  recompilation-test-config.cabal
core/: Core.hs  recompilation-test-core.cabal
