name:                recompilation-test-application
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable recompilation-test-application
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5,
                       recompilation-test-config,
                       recompilation-test-core
  default-language:    Haskell2010
